[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/TypingBase.gd" type="Script" id=1]
[ext_resource path="res://Assets/Theme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/enter2.png" type="Texture" id=3]
[ext_resource path="res://Assets/enter1.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "hide"
length = 0.32
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "show"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="TypingBase" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../ToType")
anims/RESET = SubResource( 1 )
anims/hide = SubResource( 3 )
anims/show = SubResource( 2 )

[node name="Enter" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
frame = 1
playing = true

[node name="ToType" type="RichTextLabel" parent="."]
margin_right = 300.0
margin_bottom = 61.0
grow_horizontal = 0
rect_min_size = Vector2( 300, 0 )
theme = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[color=#FFFFAA] Hey there [/color]"
meta_underlined = false
text = " Hey there "
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_lock_": true
}

[node name="NextWordTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="finishedWord" from="." to="." method="_on_TypingBase_finishedWord"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="NextWordTimer" to="." method="_on_NextWordTimer_timeout"]
